--- a/app/templates/interface.html
+++ b/app/templates/interface.html
@@ -2,6 +2,9 @@
 {% extends "base.html" %} {% from "macros.html" import render_form %} {% block
 title %}Interface{% endblock %}{% block content %}
 
+<h1>Upload CV</h1>
+{{ render_form(form, 'admin_routes.upload_cv', 'Upload') }}
+
 <div class="container">
   <div class="row">
     <div class="col-lg-6">
