--- a/app/templates/resume.html
+++ b/app/templates/resume.html
@@ -79,8 +79,7 @@
 							<h3>Interact</h3>
 							<a href="https://zerodaypoke.com/static/resume_draft_v2.pdf" download="Source_Code"
 								class="btn btn-primary ml-2">Download Source Code</a>
-							<a href="https://zerodaypoke.com/static/chris_stamper_cv.pdf" download="Chris_Stamper_CV"
-								class="btn btn-primary">Download CV</a>
+                <a href="{{ domain_name }}/static/cv/{{ pdf_name }}" download="{{ pdf_name }}" class="btn btn-primary">Download CV</a>
 							<a href="mailto:cstampok@gmail.com?subject=Job Opportunity" class="btn btn-primary ml-2">Hire Me</a>
 						</div>
 					</div>
