--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,54 +2,64 @@
 <html>
   <head>
     <!-- Title -->
-    <title>{% block title %}ZDP{% endblock %}</title>
+    <title>{% block title %}{{ _('name') }} - Digital CV{% endblock %}</title>
 
     <!-- Meta -->
     {% include 'default/meta.html' %}
 
     <!-- Favicon -->
+    <link rel="icon" href="{{ _('favicon_location') }}" type="image/x-icon" />
+
+    {% if use_extended_bootstrap %}
     <link
-      rel="icon"
-      href="{{ url_for('static', filename='images/favicon.png') }}"
-      type="image/x-icon"
+      href="https://cdn.jsdelivr.net/npm/bootswatch@5/dist/vapor/bootstrap.min.css"
+      rel="stylesheet"
     />
-    <!-- Bootstrap CSS -->
+    {% else %}
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     />
+    {% endif %}
+
     <!-- Custom CSS -->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='styles/cv.css', v='1.5') }}"
     />
     <!--fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@450&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@450&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
+      rel="stylesheet"
+    />
     {% block css %}{% endblock %}
   </head>
-  <body class="text-light">
+  <body class="{{ body_class|default('text-dark') }}">
     {% include 'flash.html' %}
-    <header class="container">
-      {% include 'default/navbar.html' %}
-    </header>
-    <main class="container">
-      {% block content %}
 
-      {% endblock %}
-    </main>
+    <header class="container">{% include 'default/navbar.html' %}</header>
+
+    <main class="container">{% block content %} {% endblock %}</main>
 
     {% include 'default/footer.html' %}
+
+    <!-- Common JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    {% block js %}
+
+    <!-- Additional JS -->
+    {% block js %} {% if use_mathjax %}
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script
       id="MathJax-script"
       async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
     ></script>
-    {% endblock %}
+    {% endif %} {% endblock %}
   </body>
 </html>
