--- a/app/templates/default/meta.html
+++ b/app/templates/default/meta.html
@@ -1,11 +1,6 @@
-<meta
-  name="description"
-  content="Chris Stamper's CV. Software Engineer and Chemical Engineer based in Tulsa, Oklahoma."
-/>
-<meta
-  name="keywords"
-  content="Chris Stamper, Software Engineer, Chemical Engineer, Tulsa, Oklahoma, CV, Resume"
-/>
-<meta name="author" content="Chris Stamper" />
+<!-- app/templates/default/meta.html -->
+<meta name="description" content="{{ _('meta_description') }}" />
+<meta name="keywords" content="{{ _('meta_keywords') }}" />
+<meta name="author" content="{{ _('meta_author') }}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta charset="UTF-8" />
