--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,7 @@
   <body class="{{ body_class|default('text-dark') }}">
     {% include 'flash.html' %}
 
-    <header class="container">{% include 'default/navbar.html' %}</header>
+    <header class="container">{% include 'default/nav/main.html' %}</header>
 
     <main class="container">{% block content %} {% endblock %}</main>
 
