--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -1,98 +1,15 @@
 {% extends 'base.html' %} {% block content %}
 
-<div class="row mt-3">
-  <!-- Filter Section -->
-  <div class="col-md-3">
-    <form method="POST" class="shadow p-3 mb-5 bg-white rounded">
-      {{ form.hidden_tag() }}
-      <div class="mb-3">{{ form.skills.label }}</div>
-      {% for subfield in form.skills %}
-      <div class="form-check">
-        {{ subfield.label(class_="form-check-label") }} {{
-        subfield(class_="form-check-input") }}
-      </div>
-      {% endfor %}
-      <button type="submit" class="btn btn-outline-primary">Filter</button>
-    </form>
-  </div>
+<div class="row project-display-container">
+  <!-- Include the Filter Section -->
+  {% include 'caro/filter.html' %}
 
-  <!-- Carousel and Project Synopsis Section -->
   <div class="col-md-9 position-relative">
-    <!-- Carousel -->
-    <div
-      id="projectCarousel"
-      class="carousel slide shadow-lg rounded"
-      data-bs-ride="carousel"
-    >
-      <!-- Carousel Indicators -->
-      <ol class="carousel-indicators">
-        {% for project in projects %}
-        <li
-          data-bs-target="#projectCarousel"
-          data-bs-slide-to="{{ loop.index0 }}"
-          {%
-          if
-          loop.first
-          %}class="active"
-          {%
-          endif
-          %}
-        ></li>
-        {% endfor %}
-      </ol>
-      <!-- Carousel Slides -->
-      <div class="carousel-inner">
-        {% for project in projects %}
-        <div class="carousel-item {% if loop.first %}active{% endif %}">
-          {% if project.image_filename %}
-          <img
-            src="{{ url_for('static', filename='images/projects/' + project.image_filename) }}"
-            alt="{{ project.name }} image"
-            class="d-block w-100 h-auto img-fluid"
-          />
-          {% else %}
-          <img
-            src="{{ url_for('static', filename='images/defaults/notfound2.png') }}"
-            alt="Default project image"
-            class="d-block w-100 h-auto img-fluid"
-          />
-          {% endif %}
-        </div>
-        {% endfor %}
-      </div>
-      <!-- Carousel Controls -->
-      <a
-        class="carousel-control-prev"
-        href="#projectCarousel"
-        role="button"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#projectCarousel"
-        role="button"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-    <!-- Project Synopsis -->
-    <div
-      class="position-absolute bottom-0 start-0 w-100 p-3"
-      style="z-index: 2; background: rgba(255, 255, 255, 0.75)"
-    >
-      <div class="card bg-transparent border-0">
-        <div class="card-body">
-          <h5 class="card-title">Project Title</h5>
-          <p class="card-text">Project description...</p>
-          <a href="#" class="btn btn-primary">Go to Project</a>
-        </div>
-      </div>
-    </div>
+    <!-- Include the Carousel -->
+    {% include 'caro/main.html' %}
+
+    <!-- Include the Project Synopsis -->
+    {% include 'caro/synopsis.html' %}
   </div>
 </div>
 
