--- a/app/templates/default/nav/links/right.html
+++ b/app/templates/default/nav/links/right.html
@@ -1,17 +1,18 @@
 <!-- Right-aligned links -->
 <div class="navbar-nav ml-auto">
   {% if current_user.is_authenticated %}
-  <a class="nav-link" href="{{ url_for('auth_routes.signout') }}">Sign Out</a>
-  <a class="nav-link" href="{{ url_for('admin_routes.interface') }}"
-    >Interface</a
-  >
-  <a class="nav-link" href="{{ url_for('auth_routes.account') }}">Account</a>
+    <a class="nav-link" href="{{ url_for('auth_routes.signout') }}">Sign Out</a>
+    <a class="nav-link" href="{{ url_for('auth_routes.account') }}">Account</a>
+    {% if current_user.has_role('ADMIN') %}
+      <a class="nav-link" href="{{ url_for('admin_routes.interface') }}">Interface</a>
+      <a class="nav-link" href="{{ url_for('admin_routes.go_to_admin') }}">Admin</a>
+    {% endif %}
   {% else %}
-  <a class="nav-link" href="{{ url_for('auth_routes.signup') }}">
-    <i class="fas fa-user-plus"></i> Sign Up
-  </a>
-  <a class="nav-link" href="{{ url_for('auth_routes.signin') }}">
-    <i class="fas fa-sign-in-alt"></i> Sign In
-  </a>
+    <a class="nav-link" href="{{ url_for('auth_routes.signup') }}">
+      <i class="fas fa-user-plus"></i> Sign Up
+    </a>
+    <a class="nav-link" href="{{ url_for('auth_routes.signin') }}">
+      <i class="fas fa-sign-in-alt"></i> Sign In
+    </a>
   {% endif %}
 </div>
