--- a/app/templates/default/nav/links/right.html
+++ b/app/templates/default/nav/links/right.html
@@ -1,11 +1,19 @@
 <!-- Right-aligned links -->
 <div class="navbar-nav ml-auto">
   {% if current_user.is_authenticated %}
-    <a class="nav-link" href="{{ url_for('auth_routes.signout') }}">Sign Out</a>
-    <a class="nav-link" href="{{ url_for('auth_routes.account') }}">Account</a>
+    <a class="nav-link" href="{{ url_for('auth_routes.signout') }}">
+      <i class="fas fa-sign-out-alt"></i> Sign Out
+    </a>
+    <a class="nav-link" href="{{ url_for('auth_routes.account') }}">
+      <i class="fas fa-user-circle"></i> Account
+    </a>
     {% if current_user.has_role('ADMIN') %}
-      <a class="nav-link" href="{{ url_for('admin_routes.interface') }}">Interface</a>
-      <a class="nav-link" href="{{ url_for('admin_routes.go_to_admin') }}">Admin</a>
+      <a class="nav-link" href="{{ url_for('admin_routes.interface') }}">
+        <i class="fas fa-cogs"></i> Interface
+      </a>
+      <a class="nav-link" href="{{ url_for('admin_routes.go_to_admin') }}">
+        <i class="fas fa-user-shield"></i> Admin
+      </a>
     {% endif %}
   {% else %}
     <a class="nav-link" href="{{ url_for('auth_routes.signup') }}">
