--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
     <!-- Favicon -->
     <link rel="icon" href="{{ _('favicon_location') }}" type="image/x-icon" />
 
-    {% if use_extended_bootstrap %}
+    {% if config['USE_EXTENDED_BOOTSTRAP'] %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootswatch@5/dist/vapor/bootstrap.min.css"
       rel="stylesheet"
@@ -25,26 +25,32 @@
     <!-- Custom CSS -->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='styles/cv.css', v='1.5') }}"
+      href="{{ url_for('static', filename='styles/cv.css', v='2.0') }}"
     />
 
     <!-- Fonts -->
-    {% include 'default/fonts.html' %}
-    {% block css %}{% endblock %}
+    {% include 'default/fonts.html' %} {% block css %}{% endblock %}
   </head>
   <body class="{{ body_class|default('text-dark') }}">
-    {% include 'flash.html' %}
+    <div class="container-fluid">
+      <header class="container d-flex flex-column">
+        {% include 'default/nav/main.html' %}
+      </header>
 
-    <header class="container d-flex flex-column">
-      {% include 'default/nav/main.html' %}
-    </header>
+      <div class="container d-flex flex-column">
+        {% include 'default/spacer.html' %}
+      </div>
 
-    <main class="container d-flex flex-column">
-      {% block content %} {% endblock %}
-    </main>
+      <div class="container d-flex flex-column">{% include 'flash.html' %}</div>
 
-    {% include 'default/footer.html' %}
+      <main class="container d-flex flex-column">
+        {% block content %} {% include 'default/construction.html' %} {% endblock %}
+      </main>
 
+      <footer class="container d-flex flex-column">
+        {% include 'default/footer.html' %}
+      </footer>
+    </div>
     <!-- Common JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
