--- a/app/templates/default/nav/links/left.html
+++ b/app/templates/default/nav/links/left.html
@@ -1,11 +1,21 @@
 <!-- Left-aligned links -->
 <div class="navbar-nav mr-auto">
-  <a class="nav-link" href="{{ url_for('main_routes.index') }}">Home</a>
-  <a class="nav-link" href="{{ url_for('main_routes.projects') }}">Search</a>
-  <a class="nav-link" href="{{ url_for('main_routes.resume') }}">Resume</a>
-  <a class="nav-link" href="{{ url_for('main_routes.about') }}">About</a>
-  <a class="nav-link" href="{{ url_for('skill_routes.skills') }}">Skills</a>
-  <a class="nav-link" href="{{ url_for('main_routes.resume') }}"
-    >CV (&Resume)</a
-  >
+  <a class="nav-link" href="{{ url_for('main_routes.index') }}">
+    <i class="fas fa-home"></i> Home
+  </a>
+  <a class="nav-link" href="{{ url_for('main_routes.projects') }}">
+    <i class="fas fa-search"></i> Search
+  </a>
+  <a class="nav-link" href="{{ url_for('main_routes.resume') }}">
+    <i class="fas fa-file-alt"></i> Resume
+  </a>
+  <a class="nav-link" href="{{ url_for('main_routes.about') }}">
+    <i class="fas fa-info-circle"></i> About
+  </a>
+  <a class="nav-link" href="{{ url_for('skill_routes.skills') }}">
+    <i class="fas fa-lightbulb"></i> Skills
+  </a>
+  <a class="nav-link" href="{{ url_for('main_routes.resume') }}">
+    <i class="fas fa-scroll"></i> CV (&Resume)
+  </a>
 </div>
