--- a/app/templates/resume/main.html
+++ b/app/templates/resume/main.html
@@ -4,5 +4,4 @@
   rel="stylesheet"
   href="{{ url_for('static', filename='styles/caro-edu.css', v='1.0') }}"
 />
-{% endblock %} {% block content %} {% include "default/header.html" %} {%
-include "resume/edu.html" %} {% endblock %}
+{% endblock %} {% block content %} {% include "default/header.html" %} {% include "resume/edu.html" %} {% endblock %}
