--- a/app/templates/resume/edu.html
+++ b/app/templates/resume/edu.html
@@ -2,7 +2,7 @@
   <h2 class="mb-4">Education</h2>
   {% for edu in educations %}
   <div class="row mb-4 row-fixed-height">
-    <div class="col-md-8 d-flex">
+    <div class="col-md-6 d-flex">
       <div class="card flex-fill card-flex-container">
         <div class="card-body card-body-overflow">
           <h5 class="card-title">{{ edu.institution }}</h5>
@@ -16,8 +16,24 @@
         </div>
       </div>
     </div>
-    <!-- Right 1/3 for Education Image -->
-    <div class="col-md-4 d-flex">
+
+    <div class="col-md-3 d-flex">
+      <div class="image-wrapper">
+        {% if edu.image_filename %}
+        <img
+          src="{{ url_for('static', filename='images/educations/' + edu.image_filename) }}"
+          alt="{{ edu.institution }}"
+        />
+        {% else %}
+        <img
+          src="{{ url_for('static', filename='images/educations/default.png') }}"
+          alt="{{ edu.institution }}"
+        />
+        {% endif %}
+      </div>
+    </div>
+
+    <div class="col-md-3 d-flex">
       {% if edu.related_skills %} {% include "caro/edu/main.html" %} {% endif %}
     </div>
   </div>
