--- a/app/templates/caro/main.html
+++ b/app/templates/caro/main.html
@@ -1,7 +1,6 @@
-<!-- Carousel -->
 <div
   id="projectCarousel"
-  class="carousel slide shadow-lg rounded"
+  class="carousel slide flex-fill d-flex flex-column carousel-position"
   data-bs-ride="carousel"
 >
   <!-- Carousel Indicators -->
@@ -21,42 +20,43 @@
     {% endfor %}
   </ol>
   <!-- Carousel Slides -->
-  <div class="carousel-inner">
+  <div class="carousel-inner carousel-inner-custom">
     {% for project in projects %}
     <div class="carousel-item {% if loop.first %}active{% endif %}">
       {% if project.image_filename %}
       <img
         src="{{ url_for('static', filename='images/projects/' + project.image_filename) }}"
-        alt="{{ project.name }} image"
-        class="d-block w-100 h-auto img-fluid"
+        alt="{{ project.name }}"
+        class="d-block w-100 carousel-img-cover"
       />
       {% else %}
       <img
         src="{{ url_for('static', filename='images/defaults/notfound2.png') }}"
         alt="Default project image"
-        class="d-block w-100 h-auto img-fluid"
+        class="d-block w-100 carousel-img-cover"
       />
       {% endif %}
+      <div class="carousel-caption d-none d-md-block">
+        <h5>{{ project.name }}</h5>
+      </div>
     </div>
     {% endfor %}
   </div>
   <!-- Carousel Controls -->
-  <a
-    class="carousel-control-prev"
-    href="#projectCarousel"
-    role="button"
+  <button
+    class="carousel-control-prev position-absolute"
+    type="button"
+    data-bs-target="#projectCarousel"
     data-bs-slide="prev"
   >
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a
-    class="carousel-control-next"
-    href="#projectCarousel"
-    role="button"
+  </button>
+  <button
+    class="carousel-control-next position-absolute"
+    type="button"
+    data-bs-target="#projectCarousel"
     data-bs-slide="next"
   >
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+  </button>
 </div>
