--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,11 @@
     <!-- Favicon -->
     <link rel="icon" href="{{ _('favicon_location') }}" type="image/x-icon" />
 
-    {% if config['USE_EXTENDED_BOOTSTRAP'] %}
+    {% if config['USE_EXTENDED_BOOTSTRAP'] == 'True' %}
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootswatch@5/dist/vapor/bootstrap.min.css"
       rel="stylesheet"
@@ -44,7 +48,8 @@
       <div class="container d-flex flex-column">{% include 'flash.html' %}</div>
 
       <main class="container d-flex flex-column">
-        {% block content %} {% include 'default/construction.html' %} {% endblock %}
+        {% block content %} {% include 'default/construction.html' %} {%
+        endblock %}
       </main>
 
       <footer class="container d-flex flex-column">
