--- a/app/templates/resume/edu.html
+++ b/app/templates/resume/edu.html
@@ -1,40 +1,57 @@
 <div class="container mt-4">
-  <h2 class="mb-4">Education</h2>
   {% for edu in educations %}
-  <div class="row mb-4 row-fixed-height">
-    <div class="col-md-6 d-flex">
-      <div class="card flex-fill card-flex-container">
-        <div class="card-body card-body-overflow">
-          <h5 class="card-title">{{ edu.institution }}</h5>
-          <h6 class="card-subtitle mb-2 text-muted">{{ edu.location }}</h6>
-          <p class="card-text">
-            <strong>Field of Study:</strong> {{ edu.field_of_study }}<br />
-            <strong>Graduation Date:</strong> {{ edu.grad_date or 'attending'
-            }}<br />
-            <strong>Details:</strong> {{ edu.details or 'N/A' }}
-          </p>
+  <div class="card mb-4 bg-secondary">
+    <!-- Card Header -->
+    <div class="card-header">
+      <div class="row">
+        <div class="col-md-6">
+          <h2 class="m-0">Education</h2>
+        </div>
+        <div class="col-md-3 text-center">
+          <h2 class="m-0">Image</h2>
+        </div>
+        <div class="col-md-3 text-center">
+          <h2 class="m-0">Skills</h2>
         </div>
       </div>
     </div>
 
-    <div class="col-md-3 d-flex">
-      <div class="image-wrapper">
-        {% if edu.image_filename %}
-        <img
-          src="{{ url_for('static', filename='images/educations/' + edu.image_filename) }}"
-          alt="{{ edu.institution }}"
-        />
-        {% else %}
-        <img
-          src="{{ url_for('static', filename='images/educations/default.png') }}"
-          alt="{{ edu.institution }}"
-        />
-        {% endif %}
+    <!-- Card Body -->
+    <div class="row card-body">
+      <!-- Education Description -->
+      <div class="col-md-6">
+        <h5 class="card-title">{{ edu.institution }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{ edu.location }}</h6>
+        <p class="card-text">
+          <strong>Field of Study:</strong> {{ edu.field_of_study }}<br />
+          <strong>Graduation Date:</strong> {{ edu.grad_date or 'attending'
+          }}<br />
+          <strong>Details:</strong> {{ edu.details or 'N/A' }}
+        </p>
       </div>
-    </div>
 
-    <div class="col-md-3 d-flex">
-      {% if edu.related_skills %} {% include "caro/edu/main.html" %} {% endif %}
+      <!-- Image -->
+      <div class="col-md-3 d-flex flex-column align-items-start">
+        <div class="image-wrapper mt-2">
+          {% if edu.image_filename %}
+          <img
+            src="{{ url_for('static', filename='images/educations/' + edu.image_filename) }}"
+            alt="{{ edu.institution }}"
+          />
+          {% else %}
+          <img
+            src="{{ url_for('static', filename='images/educations/default.png') }}"
+            alt="{{ edu.institution }}"
+          />
+          {% endif %}
+        </div>
+      </div>
+
+      <!-- Skills -->
+      <div class="col-md-3 d-flex flex-column align-items-start">
+        {% if edu.related_skills %} {% include "caro/edu/main.html" %} {% endif
+        %}
+      </div>
     </div>
   </div>
   {% endfor %}
