--- a/app/templates/default/nav/brand.html
+++ b/app/templates/default/nav/brand.html
@@ -2,7 +2,7 @@
 
 <a class="navbar-brand" href="#">
   <img
-    src="{{ url_for('static', filename='images/favicon.png') }}"
+    src="{{ url_for('static', filename='images/defaults/brand.png') }}"
     alt="CV Logo"
     width="auto"
     height="30"
