--- a/app/templates/default/nav/main.html
+++ b/app/templates/default/nav/main.html
@@ -1,6 +1,6 @@
 <!-- app/templates/default/nav/main.html -->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
   {% include 'default/nav/brand.html' %}
 
   <div class="collapse navbar-collapse" id="navbarNav">
